fix(angular/radio): fix empty radio in high-contrast-mode (#1327)

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1706,6 +1706,10 @@ textarea {
     :where(html.sbb-lean) & {
       background-color: var(--sbb-color-iron);
     }
+
+    @include cdk.high-contrast(active, off) {
+      background-color: CanvasText;
+    }
   }
 
   .sbb-selection-disabled & {
